--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "dev": "npm run serve"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bootstrap": "4.6.2",
     "chartist": "0.11.0",
     "es6-promise": "4.2.8",
     "eslint-plugin-vue": "^9.8.0",
     "vue": "2.7.14",
+    "vue-axios": "^3.5.2",
     "vue-clickaway": "2.2.2",
     "vue-notifyjs": "0.3.0",
     "vue-router": "3.0.1"
