--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "chartist": "0.11.0",
     "es6-promise": "4.2.8",
     "eslint-plugin-vue": "^9.8.0",
+    "sweetalert2": "^11.7.3",
     "vue": "2.7.14",
     "vue-axios": "^3.5.2",
     "vue-clickaway": "2.2.2",
     "vue-notifyjs": "0.3.0",
-    "vue-router": "3.0.1"
+    "vue-router": "3.0.1",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.12.1",
