--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-clickaway": "2.2.2",
     "vue-notifyjs": "0.3.0",
     "vue-router": "3.0.1",
-    "vue-sweetalert2": "^5.0.5"
+    "vue-sweetalert2": "^5.0.5",
+    "vuejs-storage": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.12.1",
