--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-notifyjs": "0.3.0",
     "vue-router": "3.0.1",
     "vue-sweetalert2": "^5.0.5",
-    "vuejs-storage": "^3.1.1"
+    "vuejs-storage": "^3.1.1",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.12.1",
