--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chartist": "0.11.0",
     "es6-promise": "4.2.8",
     "eslint-plugin-vue": "^9.8.0",
-    "sweetalert2": "^11.7.3",
+    "sweetalert2": "^11.4.8",
     "vue": "2.7.14",
     "vue-axios": "^3.5.2",
     "vue-clickaway": "2.2.2",
@@ -27,9 +27,10 @@
     "vuelidate": "^0.7.7"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.12.1",
-    "@vue/cli-plugin-eslint": "3.12.1",
-    "@vue/cli-service": "3.12.1",
+    "@types/vuelidate": "^0.7.18",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-prettier": "5.1.0",
     "sass": "1.56.2",
     "sass-loader": "10.2.0",
