--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dev": "npm run serve"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "axios": "^1.3.6",
     "bootstrap": "4.6.2",
     "chartist": "0.11.0",
