--- a/package.json
+++ b/package.json
@@ -11,22 +11,20 @@
     "dev": "npm run serve"
   },
   "dependencies": {
-    "@vuelidate/core": "^2.0.2",
-    "@vuelidate/validators": "^2.0.2",
     "axios": "^1.4.0",
     "bootstrap": "4.6.2",
     "chartist": "0.11.0",
     "es6-promise": "4.2.8",
     "eslint-plugin-vue": "^9.8.0",
     "sweetalert2": "^11.7.5",
+    "vee-validate": "^2.2.15",
     "vue": "2.7.14",
     "vue-axios": "^3.5.2",
     "vue-clickaway": "2.2.2",
     "vue-notifyjs": "0.3.0",
     "vue-router": "3.0.1",
     "vue-sweetalert2": "^5.0.5",
-    "vuejs-storage": "^3.1.1",
-    "vuelidate": "^0.7.7"
+    "vuejs-storage": "^3.1.1"
   },
   "devDependencies": {
     "@types/vuelidate": "^0.7.18",
